--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: siparis
-description: "Modern pastane ve fırın sipariş takip uygulaması."
+description: Sipariş ve stok yönetim uygulaması
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.0
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -33,7 +33,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.2
   
   # UI ve tasarım bileşenleri
   google_fonts: ^6.2.0
@@ -42,19 +42,19 @@ dependencies:
   shimmer: ^3.0.0
   
   # State yönetimi
-  provider: ^6.1.2
+  provider: ^6.0.5
   
   # Veritabanı ve depolama
   sqflite: ^2.3.2
   shared_preferences: ^2.2.2
   
   # Formatlama ve yardımcı araçlar
-  intl: ^0.19.0
+  intl: ^0.18.0
   image_picker: ^1.0.7
-  fl_chart: ^1.0.0
+  fl_chart: ^0.65.0
   uuid: ^4.3.3
   flutter_rating_bar: ^4.0.1
-  percent_indicator: ^4.2.5
+  percent_indicator: ^4.2.3
   timeline_tile: ^2.0.0
 
 dev_dependencies:
@@ -66,7 +66,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
