--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   percent_indicator: ^4.2.3
   timeline_tile: ^2.0.0
+  firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
+  firebase_storage: ^12.4.6
+  cloud_firestore: ^5.6.0
 
 dev_dependencies:
   flutter_test:
