--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,13 +51,14 @@ dependencies:
   shared_preferences: ^2.2.2
   
   # Formatlama ve yardımcı araçlar
-  intl: ^0.18.0
+  intl: ^0.19.0
   image_picker: ^1.0.7
   fl_chart: ^0.65.0
   uuid: ^4.3.3
   flutter_rating_bar: ^4.0.1
   percent_indicator: ^4.2.3
   timeline_tile: ^2.0.0
+  table_calendar: ^3.0.9
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
   firebase_storage: ^12.4.6
