--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   percent_indicator: ^4.2.3
   timeline_tile: ^2.0.0
   table_calendar: ^3.0.9
+  url_launcher: ^6.2.1
+  url_launcher_windows: ^3.1.1
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
   firebase_storage: ^12.4.6
