--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   table_calendar: ^3.0.9
   url_launcher: ^6.2.1
   url_launcher_windows: ^3.1.1
+  crypto: ^3.0.3
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
   firebase_storage: ^12.4.6
