--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   shared_preferences: ^2.2.2
   
   # Formatlama ve yardımcı araçlar
-  intl: ^0.20.2
+  intl: 0.19.0
   image_picker: ^1.0.7
   fl_chart: ^0.65.0
   uuid: ^4.3.3
@@ -65,7 +65,11 @@ dependencies:
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
   firebase_storage: ^12.4.6
+  firebase_messaging: ^15.1.3
+  flutter_local_notifications: ^18.0.1
   cloud_firestore: ^5.6.0
+  permission_handler: ^11.3.1
+  
 
 dev_dependencies:
   flutter_test:
