--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   firebase_messaging: ^15.1.3
   flutter_local_notifications: ^18.0.1
   cloud_firestore: ^5.6.0
+  cloud_functions: ^5.1.3
   permission_handler: ^11.3.1
   
 
